--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,10 +153,6 @@
     box-shadow: 0px, 20px, 20px, 0px #F5383859;
 }
 
-.pt-13 {
-    padding-top: 13px;
-}
-
 .pl-16 {
     padding-left: 16% !important;
 }
@@ -192,6 +188,10 @@
 .py-100 {
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+.pt-145 {
+    padding-top: 145px;
 }
 
 .pt-155 {
@@ -306,10 +306,10 @@ nav a {
 
 .box_1 {
     padding: 50px;
-    max-width: 330px;
-    max-height: 760px;
     border-radius: 10px;
     background: #FFFFFF;
+    width: 330px !important;
+    height: 760px !important;
     border: 2px solid #DDDDDD;
 }
 
@@ -457,8 +457,8 @@ nav a {
         width: 71% !important;
     }
 
-    .ml-sm-14 {
-        margin-left: 0 !important;
+    .ml-sm-28 {
+        margin-left: 0% !important;
     }
 }
 
@@ -466,9 +466,11 @@ nav a {
     .ml-sm-14 {
         margin-left: 14%;
     }
+}
 
-    .ml-sm-26 {
-        margin-left: 35%;
+@media (max-width:576px) {
+    .ml-sm-28 {
+        margin-left: 9%;
     }
 }
 
@@ -483,14 +485,6 @@ nav a {
 
     .slick-dots {
         width: 41% !important;
-    }
-
-    .ml-sm-14 {
-        margin-left: 14%;
-    }
-
-    .ml-sm-14 {
-        margin-left: 0 !important;
     }
 }
 
